css_parser.rb
class CSSParser
# STANDALONE START
    def setup_parser(str, debug=false)
      @string = str
      @pos = 0
      @memoizations = Hash.new { |h,k| h[k] = {} }
      @result = nil
      @failed_rule = nil
      @failing_rule_offset = -1

      setup_foreign_grammar
    end

    # This is distinct from setup_parser so that a standalone parser
    # can redefine #initialize and still have access to the proper
    # parser setup code.
    #
    def initialize(str, debug=false)
      setup_parser(str, debug)
    end

    attr_reader :string
    attr_reader :result, :failing_rule_offset
    attr_accessor :pos

    # STANDALONE START
    def current_column(target=pos)
      if c = string.rindex("\n", target-1)
        return target - c - 1
      end

      target + 1
    end

    def current_line(target=pos)
      cur_offset = 0
      cur_line = 0

      string.each_line do |line|
        cur_line += 1
        cur_offset += line.size
        return cur_line if cur_offset >= target
      end

      -1
    end

    def lines
      lines = []
      string.each_line { |l| lines << l }
      lines
    end

    #

    def get_text(start)
      @string[start..@pos-1]
    end

    def show_pos
      width = 10
      if @pos < width
        "#{@pos} (\"#{@string[0,@pos]}\" @ \"#{@string[@pos,width]}\")"
      else
        "#{@pos} (\"... #{@string[@pos - width, width]}\" @ \"#{@string[@pos,width]}\")"
      end
    end

    def failure_info
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset

      if @failed_rule.kind_of? Symbol
        info = self.class::Rules[@failed_rule]
        "line #{l}, column #{c}: failed rule '#{info.name}' = '#{info.rendered}'"
      else
        "line #{l}, column #{c}: failed rule '#{@failed_rule}'"
      end
    end

    def failure_caret
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset

      line = lines[l-1]
      "#{line}\n#{' ' * (c - 1)}^"
    end

    def failure_character
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset
      lines[l-1][c-1, 1]
    end

    def failure_oneline
      l = current_line @failing_rule_offset
      c = current_column @failing_rule_offset

      char = lines[l-1][c-1, 1]

      if @failed_rule.kind_of? Symbol
        info = self.class::Rules[@failed_rule]
        "@#{l}:#{c} failed rule '#{info.name}', got '#{char}'"
      else
        "@#{l}:#{c} failed rule '#{@failed_rule}', got '#{char}'"
      end
    end

    class ParseError < RuntimeError
    end

    def raise_error
      raise ParseError, failure_oneline
    end

    def show_error(io=STDOUT)
      error_pos = @failing_rule_offset
      line_no = current_line(error_pos)
      col_no = current_column(error_pos)

      io.puts "On line #{line_no}, column #{col_no}:"

      if @failed_rule.kind_of? Symbol
        info = self.class::Rules[@failed_rule]
        io.puts "Failed to match '#{info.rendered}' (rule '#{info.name}')"
      else
        io.puts "Failed to match rule '#{@failed_rule}'"
      end

      io.puts "Got: #{string[error_pos,1].inspect}"
      line = lines[line_no-1]
      io.puts "=> #{line}"
      io.print(" " * (col_no + 3))
      io.puts "^"
    end

    def set_failed_rule(name)
      if @pos > @failing_rule_offset
        @failed_rule = name
        @failing_rule_offset = @pos
      end
    end

    attr_reader :failed_rule

    def match_string(str)
      len = str.size
      if @string[pos,len] == str
        @pos += len
        return str
      end

      return nil
    end

    def scan(reg)
      if m = reg.match(@string[@pos..-1])
        width = m.end(0)
        @pos += width
        return true
      end

      return nil
    end

    if "".respond_to? :getbyte
      def get_byte
        if @pos >= @string.size
          return nil
        end

        s = @string.getbyte @pos
        @pos += 1
        s
      end
    else
      def get_byte
        if @pos >= @string.size
          return nil
        end

        s = @string[@pos]
        @pos += 1
        s
      end
    end

    def parse(rule=nil)
      if !rule
        _root ? true : false
      else
        # This is not shared with code_generator.rb so this can be standalone
        method = rule.gsub("-","_hyphen_")
        __send__("_#{method}") ? true : false
      end
    end

    class LeftRecursive
      def initialize(detected=false)
        @detected = detected
      end

      attr_accessor :detected
    end

    class MemoEntry
      def initialize(ans, pos)
        @ans = ans
        @pos = pos
        @uses = 1
        @result = nil
      end

      attr_reader :ans, :pos, :uses, :result

      def inc!
        @uses += 1
      end

      def move!(ans, pos, result)
        @ans = ans
        @pos = pos
        @result = result
      end
    end

    def external_invoke(other, rule, *args)
      old_pos = @pos
      old_string = @string

      @pos = other.pos
      @string = other.string

      begin
        if val = __send__(rule, *args)
          other.pos = @pos
        else
          other.set_failed_rule "#{self.class}##{rule}"
        end
        val
      ensure
        @pos = old_pos
        @string = old_string
      end
    end

    def apply(rule)
      if m = @memoizations[rule][@pos]
        m.inc!

        prev = @pos
        @pos = m.pos
        if m.ans.kind_of? LeftRecursive
          m.ans.detected = true
          return nil
        end

        @result = m.result

        return m.ans
      else
        lr = LeftRecursive.new(false)
        m = MemoEntry.new(lr, @pos)
        @memoizations[rule][@pos] = m
        start_pos = @pos

        ans = __send__ rule

        m.move! ans, @pos, @result

        # Don't bother trying to grow the left recursion
        # if it's failing straight away (thus there is no seed)
        if ans and lr.detected
          return grow_lr(rule, start_pos, m)
        else
          return ans
        end

        return ans
      end
    end

    def grow_lr(rule, start_pos, m)
      while true
        @pos = start_pos
        @result = m.result

        ans = __send__ rule
        return nil unless ans

        break if @pos <= m.pos

        m.move! ans, @pos, @result
      end

      @result = m.result
      @pos = m.pos
      return m.ans
    end

    class RuleInfo
      def initialize(name, rendered)
        @name = name
        @rendered = rendered
      end

      attr_reader :name, :rendered
    end

    def self.rule_info(name, rendered)
      RuleInfo.new(name, rendered)
    end

    #
  def setup_foreign_grammar; end

  # h = /[0-9a-fA-F]/
  def _h
    _tmp = scan(/\A(?-mix:[0-9a-fA-F])/)
    set_failed_rule :_h unless _tmp
    return _tmp
  end

  # nonascii = /[\200-\377]/
  def _nonascii
    _tmp = scan(/\A(?-mix:[\200-\377])/)
    set_failed_rule :_nonascii unless _tmp
    return _tmp
  end

  # unicode = h[1, 6] (/\r\n/ | /[ \t\r\n\f]/)?
  def _unicode

    _save = self.pos
    while true # sequence
    _save1 = self.pos
    _count = 0
    while true
      _tmp = apply(:_h)
      if _tmp
        _count += 1
        break if _count == 6
      else
        break
      end
    end
    if _count >= 1
      _tmp = true
    else
      self.pos = _save1
      _tmp = nil
    end
    unless _tmp
      self.pos = _save
      break
    end
    _save2 = self.pos

    _save3 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:\r\n)/)
    break if _tmp
    self.pos = _save3
    _tmp = scan(/\A(?-mix:[ \t\r\n\f])/)
    break if _tmp
    self.pos = _save3
    break
    end # end choice

    unless _tmp
      _tmp = true
      self.pos = _save2
    end
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_unicode unless _tmp
    return _tmp
  end

  # escape = (unicode | "\\" /[ -~\200-\377]/)
  def _escape

    _save = self.pos
    while true # choice
    _tmp = apply(:_unicode)
    break if _tmp
    self.pos = _save

    _save1 = self.pos
    while true # sequence
    _tmp = match_string("\\")
    unless _tmp
      self.pos = _save1
      break
    end
    _tmp = scan(/\A(?-mix:[ -~\200-\377])/)
    unless _tmp
      self.pos = _save1
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_escape unless _tmp
    return _tmp
  end

  # nmstart = (/[_a-zA-Z]/ | nonascii | escape)
  def _nmstart

    _save = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[_a-zA-Z])/)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_nonascii)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_nmstart unless _tmp
    return _tmp
  end

  # nmchar = (/[_a-zA-Z0-9\-]/ | nonascii | escape)
  def _nmchar

    _save = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[_a-zA-Z0-9\-])/)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_nonascii)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_nmchar unless _tmp
    return _tmp
  end

  # string1 = "\"" (/[^\n\r\f\\"]/ | "\\" nl | escape)* "\""
  def _string1

    _save = self.pos
    while true # sequence
    _tmp = match_string("\"")
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save2 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[^\n\r\f\\"])/)
    break if _tmp
    self.pos = _save2

    _save3 = self.pos
    while true # sequence
    _tmp = match_string("\\")
    unless _tmp
      self.pos = _save3
      break
    end
    _tmp = apply(:_nl)
    unless _tmp
      self.pos = _save3
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save2
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save2
    break
    end # end choice

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = match_string("\"")
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_string1 unless _tmp
    return _tmp
  end

  # string2 = "'" (/[^\n\r\f\\']/ | "\\" nl | escape)* "'"
  def _string2

    _save = self.pos
    while true # sequence
    _tmp = match_string("'")
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save2 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[^\n\r\f\\'])/)
    break if _tmp
    self.pos = _save2

    _save3 = self.pos
    while true # sequence
    _tmp = match_string("\\")
    unless _tmp
      self.pos = _save3
      break
    end
    _tmp = apply(:_nl)
    unless _tmp
      self.pos = _save3
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save2
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save2
    break
    end # end choice

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = match_string("'")
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_string2 unless _tmp
    return _tmp
  end

  # badstring1 = "\"" (/[^\n\r\f\\"]/ | "\\" nl | escape)* "\\"?
  def _badstring1

    _save = self.pos
    while true # sequence
    _tmp = match_string("\"")
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save2 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[^\n\r\f\\"])/)
    break if _tmp
    self.pos = _save2

    _save3 = self.pos
    while true # sequence
    _tmp = match_string("\\")
    unless _tmp
      self.pos = _save3
      break
    end
    _tmp = apply(:_nl)
    unless _tmp
      self.pos = _save3
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save2
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save2
    break
    end # end choice

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
      break
    end
    _save4 = self.pos
    _tmp = match_string("\\")
    unless _tmp
      _tmp = true
      self.pos = _save4
    end
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_badstring1 unless _tmp
    return _tmp
  end

  # badstring2 = "'" (/[^\n\r\f\\']/ | "\\" nl | escape)* "\\"?
  def _badstring2

    _save = self.pos
    while true # sequence
    _tmp = match_string("'")
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save2 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[^\n\r\f\\'])/)
    break if _tmp
    self.pos = _save2

    _save3 = self.pos
    while true # sequence
    _tmp = match_string("\\")
    unless _tmp
      self.pos = _save3
      break
    end
    _tmp = apply(:_nl)
    unless _tmp
      self.pos = _save3
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save2
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save2
    break
    end # end choice

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
      break
    end
    _save4 = self.pos
    _tmp = match_string("\\")
    unless _tmp
      _tmp = true
      self.pos = _save4
    end
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_badstring2 unless _tmp
    return _tmp
  end

  # badcomment1 = "/*" /[^*]*/ "*"+ (/[^\/*]/ /[^*]*/ "*"+)*
  def _badcomment1

    _save = self.pos
    while true # sequence
    _tmp = match_string("/*")
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = scan(/\A(?-mix:[^*]*)/)
    unless _tmp
      self.pos = _save
      break
    end
    _save1 = self.pos
    _tmp = match_string("*")
    if _tmp
      while true
        _tmp = match_string("*")
        break unless _tmp
      end
      _tmp = true
    else
      self.pos = _save1
    end
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save3 = self.pos
    while true # sequence
    _tmp = scan(/\A(?-mix:[^\/*])/)
    unless _tmp
      self.pos = _save3
      break
    end
    _tmp = scan(/\A(?-mix:[^*]*)/)
    unless _tmp
      self.pos = _save3
      break
    end
    _save4 = self.pos
    _tmp = match_string("*")
    if _tmp
      while true
        _tmp = match_string("*")
        break unless _tmp
      end
      _tmp = true
    else
      self.pos = _save4
    end
    unless _tmp
      self.pos = _save3
    end
    break
    end # end sequence

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_badcomment1 unless _tmp
    return _tmp
  end

  # badcomment2 = "/*" /[^*]*/ ("*"+ /[^\/*]/ /[^*]*/)*
  def _badcomment2

    _save = self.pos
    while true # sequence
    _tmp = match_string("/*")
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = scan(/\A(?-mix:[^*]*)/)
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save2 = self.pos
    while true # sequence
    _save3 = self.pos
    _tmp = match_string("*")
    if _tmp
      while true
        _tmp = match_string("*")
        break unless _tmp
      end
      _tmp = true
    else
      self.pos = _save3
    end
    unless _tmp
      self.pos = _save2
      break
    end
    _tmp = scan(/\A(?-mix:[^\/*])/)
    unless _tmp
      self.pos = _save2
      break
    end
    _tmp = scan(/\A(?-mix:[^*]*)/)
    unless _tmp
      self.pos = _save2
    end
    break
    end # end sequence

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_badcomment2 unless _tmp
    return _tmp
  end

  # baduri1 = url "(" w (/[\!\#\$\%\&\*-\[\]-\~]/ | nonascii | escape)* w
  def _baduri1

    _save = self.pos
    while true # sequence
    _tmp = apply(:_url)
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = match_string("(")
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_w)
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save2 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[\!\#\$\%\&\*-\[\]-\~])/)
    break if _tmp
    self.pos = _save2
    _tmp = apply(:_nonascii)
    break if _tmp
    self.pos = _save2
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save2
    break
    end # end choice

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_w)
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_baduri1 unless _tmp
    return _tmp
  end

  # baduri2 = url "(" w string w
  def _baduri2

    _save = self.pos
    while true # sequence
    _tmp = apply(:_url)
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = match_string("(")
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_w)
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_string)
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_w)
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_baduri2 unless _tmp
    return _tmp
  end

  # baduri3 = url "(" w badstring
  def _baduri3

    _save = self.pos
    while true # sequence
    _tmp = apply(:_url)
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = match_string("(")
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_w)
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_badstring)
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_baduri3 unless _tmp
    return _tmp
  end

  # comment = "/*" /[^*]*/ "*"+ (/[^\/*]/ /[^*]*/ "*"+)* "/"
  def _comment

    _save = self.pos
    while true # sequence
    _tmp = match_string("/*")
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = scan(/\A(?-mix:[^*]*)/)
    unless _tmp
      self.pos = _save
      break
    end
    _save1 = self.pos
    _tmp = match_string("*")
    if _tmp
      while true
        _tmp = match_string("*")
        break unless _tmp
      end
      _tmp = true
    else
      self.pos = _save1
    end
    unless _tmp
      self.pos = _save
      break
    end
    while true

    _save3 = self.pos
    while true # sequence
    _tmp = scan(/\A(?-mix:[^\/*])/)
    unless _tmp
      self.pos = _save3
      break
    end
    _tmp = scan(/\A(?-mix:[^*]*)/)
    unless _tmp
      self.pos = _save3
      break
    end
    _save4 = self.pos
    _tmp = match_string("*")
    if _tmp
      while true
        _tmp = match_string("*")
        break unless _tmp
      end
      _tmp = true
    else
      self.pos = _save4
    end
    unless _tmp
      self.pos = _save3
    end
    break
    end # end sequence

    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = match_string("/")
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_comment unless _tmp
    return _tmp
  end

  # ident = "-"? nmstart nmchar*
  def _ident

    _save = self.pos
    while true # sequence
    _save1 = self.pos
    _tmp = match_string("-")
    unless _tmp
      _tmp = true
      self.pos = _save1
    end
    unless _tmp
      self.pos = _save
      break
    end
    _tmp = apply(:_nmstart)
    unless _tmp
      self.pos = _save
      break
    end
    while true
    _tmp = apply(:_nmchar)
    break unless _tmp
    end
    _tmp = true
    unless _tmp
      self.pos = _save
    end
    break
    end # end sequence

    set_failed_rule :_ident unless _tmp
    return _tmp
  end

  # name = nmchar+
  def _name
    _save = self.pos
    _tmp = apply(:_nmchar)
    if _tmp
      while true
        _tmp = apply(:_nmchar)
        break unless _tmp
      end
      _tmp = true
    else
      self.pos = _save
    end
    set_failed_rule :_name unless _tmp
    return _tmp
  end

  # num = (/[0-9]+/ | /[0-9]*/ "." /[0-9]+/)
  def _num

    _save = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[0-9]+)/)
    break if _tmp
    self.pos = _save

    _save1 = self.pos
    while true # sequence
    _tmp = scan(/\A(?-mix:[0-9]*)/)
    unless _tmp
      self.pos = _save1
      break
    end
    _tmp = match_string(".")
    unless _tmp
      self.pos = _save1
      break
    end
    _tmp = scan(/\A(?-mix:[0-9]+)/)
    unless _tmp
      self.pos = _save1
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_num unless _tmp
    return _tmp
  end

  # string = (string1 | string2)
  def _string

    _save = self.pos
    while true # choice
    _tmp = apply(:_string1)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_string2)
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_string unless _tmp
    return _tmp
  end

  # badstring = (badstring1 | badstring2)
  def _badstring

    _save = self.pos
    while true # choice
    _tmp = apply(:_badstring1)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_badstring2)
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_badstring unless _tmp
    return _tmp
  end

  # badcomment = (badcomment1 | badcomment2)
  def _badcomment

    _save = self.pos
    while true # choice
    _tmp = apply(:_badcomment1)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_badcomment2)
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_badcomment unless _tmp
    return _tmp
  end

  # baduri = (baduri1 | baduri2 | baduri3)
  def _baduri

    _save = self.pos
    while true # choice
    _tmp = apply(:_baduri1)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_baduri2)
    break if _tmp
    self.pos = _save
    _tmp = apply(:_baduri3)
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_baduri unless _tmp
    return _tmp
  end

  # url = (/[\!\#\$\%\&\*-\~]/ | nonascii | escape)*
  def _url
    while true

    _save1 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:[\!\#\$\%\&\*-\~])/)
    break if _tmp
    self.pos = _save1
    _tmp = apply(:_nonascii)
    break if _tmp
    self.pos = _save1
    _tmp = apply(:_escape)
    break if _tmp
    self.pos = _save1
    break
    end # end choice

    break unless _tmp
    end
    _tmp = true
    set_failed_rule :_url unless _tmp
    return _tmp
  end

  # s = /[ \t\r\n\f]+/
  def _s
    _tmp = scan(/\A(?-mix:[ \t\r\n\f]+)/)
    set_failed_rule :_s unless _tmp
    return _tmp
  end

  # w = s?
  def _w
    _save = self.pos
    _tmp = apply(:_s)
    unless _tmp
      _tmp = true
      self.pos = _save
    end
    set_failed_rule :_w unless _tmp
    return _tmp
  end

  # nl = ("\n" | /\r\n/ | /\r/ | /\f/)
  def _nl

    _save = self.pos
    while true # choice
    _tmp = match_string("\n")
    break if _tmp
    self.pos = _save
    _tmp = scan(/\A(?-mix:\r\n)/)
    break if _tmp
    self.pos = _save
    _tmp = scan(/\A(?-mix:\r)/)
    break if _tmp
    self.pos = _save
    _tmp = scan(/\A(?-mix:\f)/)
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_nl unless _tmp
    return _tmp
  end

  # nulls = /\0{0,4}/
  def _nulls
    _tmp = scan(/\A(?-mix:\0{0,4})/)
    set_failed_rule :_nulls unless _tmp
    return _tmp
  end

  # trail = (/\r\n/ | /[ \t\r\n\f]/)?
  def _trail
    _save = self.pos

    _save1 = self.pos
    while true # choice
    _tmp = scan(/\A(?-mix:\r\n)/)
    break if _tmp
    self.pos = _save1
    _tmp = scan(/\A(?-mix:[ \t\r\n\f])/)
    break if _tmp
    self.pos = _save1
    break
    end # end choice

    unless _tmp
      _tmp = true
      self.pos = _save
    end
    set_failed_rule :_trail unless _tmp
    return _tmp
  end

  # letter = (< . > &{ text == down } | nulls < . > &{text == up || text == down} trail)
  def _letter(down,up)

    _save = self.pos
    while true # choice

    _save1 = self.pos
    while true # sequence
    _text_start = self.pos
    _tmp = get_byte
    if _tmp
      text = get_text(_text_start)
    end
    unless _tmp
      self.pos = _save1
      break
    end
    _save2 = self.pos
    _tmp = begin;  text == down ; end
    self.pos = _save2
    unless _tmp
      self.pos = _save1
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save

    _save3 = self.pos
    while true # sequence
    _tmp = apply(:_nulls)
    unless _tmp
      self.pos = _save3
      break
    end
    _text_start = self.pos
    _tmp = get_byte
    if _tmp
      text = get_text(_text_start)
    end
    unless _tmp
      self.pos = _save3
      break
    end
    _save4 = self.pos
    _tmp = begin; text == up || text == down; end
    self.pos = _save4
    unless _tmp
      self.pos = _save3
      break
    end
    _tmp = apply(:_trail)
    unless _tmp
      self.pos = _save3
    end
    break
    end # end sequence

    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_letter unless _tmp
    return _tmp
  end

  # A = letter("a", "A")
  def _A
    _tmp = _letter("a", "A")
    set_failed_rule :_A unless _tmp
    return _tmp
  end

  # C = letter("c", "C")
  def _C
    _tmp = _letter("c", "C")
    set_failed_rule :_C unless _tmp
    return _tmp
  end

  # D = letter("d", "D")
  def _D
    _tmp = _letter("d", "D")
    set_failed_rule :_D unless _tmp
    return _tmp
  end

  # E = letter("e", "E")
  def _E
    _tmp = _letter("e", "E")
    set_failed_rule :_E unless _tmp
    return _tmp
  end

  # F = letter("f", "F")
  def _F
    _tmp = _letter("f", "F")
    set_failed_rule :_F unless _tmp
    return _tmp
  end

  # G = (letter("g", "G") | "\\g")
  def _G

    _save = self.pos
    while true # choice
    _tmp = _letter("g", "G")
    break if _tmp
    self.pos = _save
    _tmp = match_string("\\g")
    break if _tmp
    self.pos = _save
    break
    end # end choice

    set_failed_rule :_G unless _tmp
    return _tmp
  end

  # H = (letter("h", "H") | "\\h")
  def _H

    _save = self.pos
    while true # choice
    _tmp = _letter("h", "H")
    break if _tmp
    self.pos = _save
    _tmp = match_string("\\h")
    break if _tmp
    self.pos = _save
    break
    end # end choice
